fix 404 not centered

--- a/src/css/style.scss
+++ b/src/css/style.scss
@@ -116,6 +116,9 @@ $web-font-path: false;
   top: 50%;
   left: 50%;
   text-align: center;
+  width: 150px;
+  height: 100px;
+  margin: -50px 0 0 -75px;
 }
 
 /*
